--- a/painel.html
+++ b/painel.html
@@ -32,32 +32,21 @@
             <div class="container px-4 px-lg-5 h-100">
                 <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                     <section class="cartao1">
-                        <h1>SEJA BEM-VINDO A SOARES CARS!</h1>
-                        <hr style="color: red;">
-                        <p class="bemv" style="color: aliceblue;">
+                        <h1>SEJA BEM-VINDO AO SISTEMA!</h1>
+                        <h2>O login foi efetuado com sucesso.</h2>
+                        <div class="cartoes">
+                            <section style="background-color: white; width: 50%; border-radius: 5px;">
+                                <h2 class="cart" style="color: black; font-size: 25px;">RESUMO</h2>
+                                <p>Atividades recentes e informações rápidas.</p>
+                            </section>
                             <br>
-                            Na Soares Cars, você encontra muito mais do que carros, encontra confiança, qualidade e um atendimento feito sob medida para você.
-                            Somos apaixonados por automóveis e dedicados a oferecer as melhores opções de veículos novos e seminovos, com condições especiais que cabem no seu bolso.
-                            <br>
-                            Explore nosso site, conheça nosso estoque atualizado e descubra por que a Soares Cars é a escolha certa para realizar o sonho do seu próximo carro.
-                            Aqui, cada cliente é parte da nossa família.
-                        </p>
-
-                        <button style="border-radius: 10px;"><a href="login.html" style="color: aliceblue;">Realizar Login</a></button>
+                            <section style="background-color: white; width: 50%; border-radius: 5px;">
+                                <h2 class="cart" style="color: black; font-size: 25px;">CONFIGURAÇÕES</h2>
+                                <p>Links para editar perfil e preferências</p>
+                            </section>
+                        </div>
                     </section>
                 </div>
-            </div>
-        </section>
-        <section class="page-section" id="sobre">
-            <div class="container px-4 px-lg-5" style="padding-top: 6%;">
-                <section class="cartao2">
-                <h1>SEJA BEM-VINDO A SOARES CARS!</h1>
-                <hr style="color: red;">
-                        <p class="bemv" style="color: aliceblue;">
-                            um atendimento diferenciado. Nosso compromisso é unir confiança e paixão por carros, garantindo que cada cliente encontre o veículo ideal para sua necessidade.
-                            Mais do que vender automóveis, buscamos construir relacionamentos duradouros, sempre priorizando a satisfação e a confiança de quem escolhe a Soares Cars.
-                        </p>
-                </section>
             </div>
         </section>
         <footer class="bg-light py-5">
